設定ファイルとかログとか

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = env ipython sphinx nose pylint epydoc
+parts = env server ipython sphinx nose epydoc
 develop =
         .
 
@@ -22,8 +22,17 @@ eggs =
      zc.recipe.egg
      ${buildout:pkgname}
 
-
 interpreter = python
+
+
+[server]
+recipe = zc.recipe.egg:scripts
+eggs = ${env:eggs}
+
+entry-points = trolled=trolle:main
+arguments = ['--root=${buildout:directory}', '--conf=${server:conf}'] + sys.argv[1:]
+
+conf = ${buildout:directory}/trolle-config.ini
 
 
 [ipython]
@@ -72,20 +81,20 @@ defaults =
     --with-xunit
 
 
-[pylint]
-recipe = zc.recipe.egg
-eggs =
-     ${env:eggs}
-     pylint
+# [pylint]
+# recipe = zc.recipe.egg
+# eggs =
+#      ${env:eggs}
+#      pylint
 
-entry-points = pylint=pylint.lint:Run
-arguments = sys.argv[1:]+[
-        '--output-format=html',
-        '--import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}.dot',
-        '--ext-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_external.dot',
-        '--int-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_internal.dot',
-        '--init-import=y',
-        '${buildout:directory}/${buildout:pkgname}']
+# entry-points = pylint=pylint.lint:Run
+# arguments = sys.argv[1:]+[
+#         '--output-format=html',
+#         '--import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}.dot',
+#         '--ext-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_external.dot',
+#         '--int-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_internal.dot',
+#         '--init-import=y',
+#         '${buildout:directory}/${buildout:pkgname}']
 
 
 [epydoc]
