--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,10 +9,13 @@ extensions = buildout-versions
 versions = versions
 
 [versions]
-tornado = 2.3
+tornado = 2.4
 sqlachemy = 0.7.8
 zope.pagetemplate = 3.6.3
 zc.buildout = 1.6.3
+sphinx = 1.1.3
+Pygments = 1.5
+
 
 [env]
 recipe = zc.recipe.egg
