--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,9 @@ zope.pagetemplate = 3.6.3
 zc.buildout = 1.6.3
 sphinx = 1.1.3
 Pygments = 1.5
+nose = 1.2.0
+nosexcover = 1.0.7
+coverage = 3.5.2
 
 
 [env]
@@ -58,7 +61,7 @@ extra-paths = ${buildout:directory}
 recipe = zc.recipe.egg
 eggs =
      ${env:eggs}
-     coverage==3.4
+     coverage
      oktest
 
 
@@ -66,7 +69,7 @@ eggs =
 recipe = pbp.recipe.noserunner
 eggs =
      ${noseenv:eggs}
-     nosexcover==1.0.5
+     nosexcover
      unittest-xml-reporting
      pbp.recipe.noserunner
 
@@ -79,7 +82,7 @@ defaults =
     --cover-erase
     --cover-package=${buildout:pkgname}
     --cover-html
-    --cover-html-dir=${buildout:directory}/docs/coverage
+    --cover-html-dir=${buildout:directory}/coverage
     --with-xcoverage
     --with-xunit
 
