--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = env server ipython sphinx nose epydoc
+parts = env server ipython sphinx nose epydoc i18n
 develop =
         .
 
@@ -46,6 +46,14 @@ recipe = zc.recipe.egg
 eggs =
      ${env:eggs}
      ipython
+
+
+[i18n]
+recipe = z3c.recipe.i18n:i18n
+zcml = ${buildout:directory}/trolle/configure.zcml
+domain = trolle
+output = ${buildout:directory}/trolle/locales
+
 
 
 [sphinx]
