--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,8 +27,10 @@ eggs =
 # from easy_install
      zc.recipe.egg
      ${buildout:pkgname}
+     z3c.autoinclude
 
 interpreter = python
+zcml = zope.i18n-meta
 
 
 [server]
