--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = env server ipython sphinx nose epydoc i18n
+parts = env server ipython sphinx nose epydoc pylint pyflakes pep8 i18n
 develop =
         .
 
@@ -97,20 +97,36 @@ defaults =
     --with-xunit
 
 
-# [pylint]
-# recipe = zc.recipe.egg
-# eggs =
-#      ${env:eggs}
-#      pylint
+[pylint]
+recipe = zc.recipe.egg:scripts
+eggs =
+     ${env:eggs}
+     pylint
 
-# entry-points = pylint=pylint.lint:Run
-# arguments = sys.argv[1:]+[
-#         '--output-format=html',
-#         '--import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}.dot',
-#         '--ext-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_external.dot',
-#         '--int-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_internal.dot',
-#         '--init-import=y',
-#         '${buildout:directory}/${buildout:pkgname}']
+entry-points = pylint=pylint.lint:Run
+arguments = sys.argv[1:]+[
+         '--import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}.dot',
+        '--ext-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_external.dot',
+        '--int-import-graph=${buildout:directory}/docs/pylint_${buildout:pkgname}_internal.dot',
+        '--init-import=y',
+        '--disable=C0103,C0301,W0611,E1101',
+        '${buildout:directory}/${buildout:pkgname}']
+
+
+[pyflakes]
+recipe = zc.recipe.egg:scripts
+entry-points = pyflakes=pyflakes.scripts.pyflakes:main
+eggs =
+     ${env:eggs}
+     pyflakes
+
+
+[pep8]
+recipe = zc.recipe.egg:scripts
+entry-points = pep8=pep8:_main
+eggs =
+     ${env:eggs}
+     pep8
 
 
 [epydoc]
