--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ versions = versions
 [versions]
 tornado = 2.4
 sqlachemy = 0.7.8
-zope.pagetemplate = 3.6.3
+# zope.pagetemplate = 3.6.3
 zc.buildout = 1.6.3
 sphinx = 1.1.3
 Pygments = 1.5
@@ -23,7 +23,7 @@ coverage = 3.5.2
 [env]
 recipe = zc.recipe.egg
 
-eggs = 
+eggs =
 # from easy_install
      zc.recipe.egg
      ${buildout:pkgname}
@@ -85,7 +85,7 @@ eggs =
 
 working-directory = ${buildout:directory}/test
 
-defaults =  
+defaults =
     --verbosity=3
     --with-doctest
     --doctest-extension=txt
