--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,9 +52,9 @@ eggs =
 
 [i18n]
 recipe = z3c.recipe.i18n:i18n
-zcml = ${buildout:directory}/trolle/configure.zcml
+zcml = ${buildout:directory}/${buildout:pkgname}/configure.zcml
 domain = trolle
-output = ${buildout:directory}/trolle/locales
+output = ${buildout:directory}/${buildout:pkgname}/locales
 
 
 
